--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ a{
     position:absolute;
     top:0px;
     left:0px;
-    height:15vh;
+    height:10vh;
     width:100vw;
     background-color: #252e39;
     display:grid;
@@ -112,8 +112,14 @@ a{
 
 }
 
-.Titular_image{
-    width:800px;
+.Titular_images{
+    position: absolute;
+    top:2vh;
+    width:100vw;
+    height:30vh;
+    object-fit: contain;
+    background-size:100% 100%;
+    background-image: url("Images/titular_images/Farzi.webp");
 }
 
 
@@ -156,7 +162,7 @@ a{
 
 #main_recommended_movies{
     position: absolute;
-    top:80vh;
+    top:75vh;
     left:2vw;
     color:white;
     font-weight: 700;
@@ -166,11 +172,12 @@ a{
 
 .Recommended_movies_grid{
     position: absolute;
-    top:86vh;
+    top:80vh;
     left:1vw;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
+
     /*
     grid-template-rows: 20vh 20vh;
     grid-template-columns: 20vw 20vw 20vw 20vw 20vw;
@@ -184,19 +191,22 @@ a{
 .Recommended_movies_grid>*{
     width:20%;
     height:20%;
+    padding-left: 10px;
     transition-property: all;
     transition-duration: 500ms;
 }
 
 .Recommended_movies_grid>*:hover{
     padding-left:0px;
+    padding-right: 0px;
     border: solid 1px skyblue;
     width:280px;
     height:280px;
 }
-.Recommended_movies_image{
+.Recommended_movies_image{  
     width:100%;
     height:100%;
+
 }
 
 
